tests/snapshots/integration__integration_tests__post_start_commands__post_start_multiple_background.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mfeature[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].feature[0m[0m
💡 [2m[2mRun `wt config shell install` to enable automatic cd[0m[0m
🔄 [36mRunning post-start [1mtask1[0m:[0m
[107m [0m  [1m[34mecho[0m [32m'Task 1 running'[0m [36m>[0m task1.txt[0m
🔄 [36mRunning post-start [1mtask2[0m:[0m
[107m [0m  [1m[34mecho[0m [32m'Task 2 running'[0m [36m>[0m task2.txt[0m

----- stderr -----
